[package]
name = "face_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.95.1", default-features = false, features = ["imgcodecs", "objdetect", "imgproc", "highgui"] }
indicatif = "0.17.8"
walkdir = "2.5.0"
